# Pearlexa_Gate_Firmware_ESP_IDF

./: .gitignore  CMakeLists.txt  README.md  README_PEARLEXA_CONNECT_REFACTOR.md  RELEASE_NOTES.md  git_upload_commands.txt  partitions.csv  sdkconfig  sdkconfig.defaults.esp32.nonproduction  sdkconfig.defaults.esp32c3.nonproduction
components/pearlexa_connect/: CMakeLists.txt  idf_component.yml
components/pearlexa_connect/include/: pearlexa_connect.h
components/pearlexa_connect/src/: pearlexa_connect.c
main/: CMakeLists.txt  main.c
