idf_component_register(
    SRCS
        "src/pearlexa_connect.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        bt
        driver
        esp_timer
        nvs_flash
        esp_event
        esp_netif
        esp_wifi
        esp-tls
        mbedtls
        esp_http_client
        esp_https_ota
        app_update
        esp_partition
        mqtt
        json
)
